tests/paczka1/fuzzy1/78887211.err
Error in line 1: Qr8EPN A787 38,1
Error in line 9: njFEU51aV1 A546 92,6
Error in line 16: njFEU51aV1 S734 22,7
Error in line 14: 2FGARoA A787 75,8
Error in line 26: UISA A787 78,7
Error in line 23: A485 A787 62,7
Error in line 38: Ncz4mGI A787 69,6
Error in line 33: UISA A546 17,2
